--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -1,19 +1,58 @@
+@font-face {
+  font-family: 'Montserrat';
+  src: url("../fonts/Montserrat-Bold.woff2") format("woff2"), url("../fonts/Montserrat-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+}
+.btn {
+  font-size: 18px;
+  font-family: 'Montserrat';
+  color: #797979;
+}
+.btn.btn-o {
+  border: 3px solid #797979;
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-size: 18px;
+  padding: 12px 25px;
+}
+
+.btn.focus, .btn:focus, .btn:hover {
+  color: #333;
+  text-decoration: none;
+  outline: none;
+}
+
 * {
-  margin: 0; }
+  margin: 0;
+}
 
 .navbar-default {
   background: none;
   border: none;
   border-radius: 0;
-  margin-bottom: 0; }
-  .navbar-default .navbar-brand {
-    height: auto; }
-  .navbar-default .active > a, .navbar-default .active > a:focus, .navbar-default .active > a:hover {
-    background: none; }
-  .navbar-default .navbar-nav > li {
-    padding: 18px 15px; }
-    .navbar-default .navbar-nav > li a {
-      padding: 0; }
+  margin-bottom: 0;
+  z-index: 26;
+}
+.navbar-default .navbar-header {
+  margin-right: 70px;
+}
+.navbar-default .navbar-brand {
+  height: auto;
+}
+.navbar-default .active > a, .navbar-default .active > a:focus, .navbar-default .active > a:hover {
+  background: none !important;
+}
+.navbar-default .navbar-nav > li {
+  padding: 18px 20px;
+}
+.navbar-default .navbar-nav > li a {
+  padding: 0;
+  font-family: 'Montserrat';
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #797979 !important;
+}
 
 /* HOME PAGE CSS */
 .home-hero-parallax {
@@ -21,6 +60,59 @@
   width: 100%;
   background: #f9f8f6;
   margin-top: -57px;
-  padding-top: 57px; }
+  padding-top: 57px;
+  position: relative;
+}
+.home-hero-parallax .layer1 {
+  z-index: 1;
+}
+.home-hero-parallax .layer2 {
+  z-index: 2;
+}
+
+.welcome-text {
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+}
+.welcome-text h1 {
+  line-height: 75px;
+  font-size: 60px;
+  font-family: 'Montserrat';
+  color: #646260;
+  text-transform: uppercase;
+  margin-bottom: 50px;
+}
+
+.masthead-banner {
+  width: 100%;
+  height: 453px;
+  padding: 0;
+  position: relative;
+}
+.masthead-banner .parallax {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-align: center;
+}
+.masthead-banner img {
+  position: relative;
+  top: 0;
+  left: 0;
+}
+.masthead-banner img.layer-blue-baloon {
+  top: 60px;
+  left: 100px;
+}
+.masthead-banner img.layer-red-balloon {
+  left: 149px;
+  top: -55px;
+}
+.masthead-banner img.layer-slogan {
+  top: 56px;
+  left: -24px;
+}
 
 /*# sourceMappingURL=style.css.map */
