--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -4,10 +4,17 @@
   font-weight: bold;
   font-style: normal;
 }
+@font-face {
+  font-family: 'Montserrat-Regular';
+  src: url("../fonts/Montserrat-Regular.woff2") format("woff2"), url("../fonts/Montserrat-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 .btn {
   font-size: 18px;
   font-family: 'Montserrat';
   color: #797979;
+  background: #f9f8f6;
 }
 .btn.btn-o {
   border: 3px solid #797979;
@@ -23,8 +30,26 @@
   outline: none;
 }
 
+.socmed {
+  padding: 0;
+}
+.socmed li {
+  display: inline-block;
+}
+.socmed li a {
+  display: block;
+  width: 30px;
+  height: 30px;
+  background: #222222;
+  border-radius: 15px;
+  color: #f9f8f6;
+  text-align: center;
+  padding-top: 5px;
+}
+
 * {
   margin: 0;
+  font-family: 'Montserrat-Regular';
 }
 
 .navbar-default {
@@ -63,11 +88,42 @@
   padding-top: 57px;
   position: relative;
 }
-.home-hero-parallax .layer1 {
-  z-index: 1;
+.home-hero-parallax #parallax-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  overflow-x: hidden;
 }
-.home-hero-parallax .layer2 {
-  z-index: 2;
+.home-hero-parallax #parallax-container #layer1 {
+  position: absolute;
+  top: 10%;
+  left: 22%;
+}
+.home-hero-parallax #parallax-container #layer2 {
+  position: absolute;
+  left: 41%;
+  top: 20%;
+}
+.home-hero-parallax #parallax-container #layer3 {
+  position: absolute;
+  left: 44%;
+  top: 52%;
+}
+.home-hero-parallax #parallax-container #layer4 {
+  position: absolute;
+  left: 57%;
+  top: 63%;
+}
+.home-hero-parallax #parallax-container #layer5 {
+  position: absolute;
+  left: 57%;
+  top: 37%;
+}
+.home-hero-parallax #parallax-container #layer6 {
+  position: absolute;
+  left: 57%;
+  top: 0;
 }
 
 .welcome-text {
@@ -84,35 +140,30 @@
   margin-bottom: 50px;
 }
 
-.masthead-banner {
-  width: 100%;
-  height: 453px;
-  padding: 0;
-  position: relative;
+footer {
+  padding: 30px 0;
+  background: #f9f8f6;
+  margin-top: 30px;
+  color: #737373;
 }
-.masthead-banner .parallax {
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
+footer .footer-logo {
+  text-align: right;
+}
+footer .copyright {
   text-align: center;
 }
-.masthead-banner img {
-  position: relative;
-  top: 0;
-  left: 0;
+footer .footer-hr {
+  border-top: 1px solid #cecece;
+  margin: 30px 0;
 }
-.masthead-banner img.layer-blue-baloon {
-  top: 60px;
-  left: 100px;
+footer .footer-address-table {
+  margin-top: 20px;
 }
-.masthead-banner img.layer-red-balloon {
-  left: 149px;
-  top: -55px;
+footer .footer-address-table tr td {
+  padding: 0 5px;
 }
-.masthead-banner img.layer-slogan {
-  top: 56px;
-  left: -24px;
+footer .footer-address-table tr td:first-child {
+  padding-right: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
