--- a/app/assets/sass/style.scss
+++ b/app/assets/sass/style.scss
@@ -3,7 +3,9 @@
 
 * {
   margin: 0;
+  font-family: 'Montserrat-Regular';
 }
+
 .navbar-default {
   background: none;
   border: none;
@@ -46,11 +48,43 @@
   padding-top: 57px;
   position: relative;
 
-  .layer1 {
-    z-index: 1;
-  }
-  .layer2 {
-    z-index: 2;
+  #parallax-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    overflow-x: hidden;
+
+    #layer1 {
+      position: absolute;
+      top: 10%;
+      left: 22%;
+    }
+    #layer2 {
+      position: absolute;
+      left: 41%;
+      top: 20%;
+    }
+    #layer3 {
+      position: absolute;
+      left: 44%;
+      top: 52%;
+    }
+    #layer4 {
+      position: absolute;
+      left: 57%;
+      top: 63%;
+    }
+    #layer5 {
+      position: absolute;
+      left: 57%;
+      top: 37%;
+    }
+    #layer6 {
+      position: absolute;
+      left: 57%;
+      top: 0;
+    }
   }
 }
 
@@ -69,37 +103,31 @@
   }
 }
 
+footer {
+  padding: 30px 0;
+  background: #f9f8f6;
+  margin-top: 30px;
+  color: #737373;
 
-.masthead-banner {
-  width: 100%;
-  height: 453px;
-  padding: 0;
-  position: relative;
-
-  .parallax {
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
+  .footer-logo {
+    text-align: right;
+  }
+  .copyright {
     text-align: center;
   }
-
-  img {
-    position: relative;
-    top: 0;
-    left: 0;
+  .footer-hr {
+    border-top: 1px solid #cecece;
+    margin: 30px 0;
   }
-
-  img.layer-blue-baloon {
-    top: 60px;
-    left: 100px;
-  }
-  img.layer-red-balloon {
-    left: 149px;
-    top: -55px;
-  }
-  img.layer-slogan {
-    top: 56px;
-    left: -24px;
+  .footer-address-table {
+    margin-top: 20px;
+    tr {
+      td {
+        padding: 0 5px;
+      }
+      td:first-child {
+        padding-right: 20px;
+      }
+    }
   }
 }
