--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -10,6 +10,12 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'Droid Serif Italic';
+  src: url("../fonts/DroidSerif-Italic.woff2") format("woff2"), url("../fonts/DroidSerif-Italic.woff") format("woff"), url("../fonts/DroidSerif-Italic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: italic;
+}
 .btn {
   font-size: 18px;
   font-family: 'Montserrat';
@@ -166,12 +172,47 @@ footer .footer-address-table tr td:first-child {
   padding-right: 20px;
 }
 
+.portfolio-btn {
+  display: table;
+  margin: 50px auto;
+}
+.portfolio-btn .btn {
+  border: none;
+  background: none;
+  text-transform: uppercase;
+  color: #bbbbbb;
+}
+.portfolio-btn .btn:focus, .portfolio-btn .btn:hover, .portfolio-btn .btn:active, .portfolio-btn .btn.active {
+  outline: none;
+  color: #bbbbbb;
+  box-shadow: none;
+}
+.portfolio-btn .btn.active {
+  color: #777777;
+}
+
 .isotope {
   padding: 0;
   list-style: none;
 }
 .isotope li {
   list-style: none;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.isotope li .portfolio-name {
+  font-family: 'Montserrat';
+  font-size: 18px;
+  color: #333333;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+.isotope li .portfolio-class {
+  font-family: 'Droid Serif Italic';
+  font-size: 14px;
+  color: #737373;
 }
 
 /*# sourceMappingURL=style.css.map */
