--- a/app/assets/sass/_fontface.scss
+++ b/app/assets/sass/_fontface.scss
@@ -13,3 +13,12 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Droid Serif Italic';
+  src: url('../fonts/DroidSerif-Italic.woff2') format('woff2'),
+  url('../fonts/DroidSerif-Italic.woff') format('woff'),
+  url('../fonts/DroidSerif-Italic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: italic;
+}
