--- a/app/assets/sass/style.scss
+++ b/app/assets/sass/style.scss
@@ -132,11 +132,51 @@ footer {
   }
 }
 
+.portfolio-btn {
+  display: table;
+  margin: 50px auto;
+
+  .btn {
+    border: none;
+    background: none;
+    text-transform: uppercase;
+    color: #bbbbbb;
+
+    &:focus, &:hover, &:active, &.active {
+      outline: none;
+      color: #bbbbbb;
+      box-shadow: none;
+    }
+
+    &.active {
+      color: #777777;
+    }
+  }
+}
+
 .isotope {
   padding: 0;
   list-style: none;
 
   li {
     list-style: none;
+    text-align: center;
+    margin-bottom: 50px;
+
+    .portfolio-name {
+      font-family: 'Montserrat';
+      font-size: 18px;
+      color: #333333;
+      margin-top: 30px;
+      margin-bottom: 10px;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+    }
+
+    .portfolio-class {
+      font-family: 'Droid Serif Italic';
+      font-size: 14px;
+      color: #737373;
+    }
   }
 }
