--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -68,6 +68,11 @@
 .navbar-default .navbar-header {
   margin-right: 70px;
 }
+@media (max-width: 768px) {
+  .navbar-default .navbar-header {
+    margin-right: 0;
+  }
+}
 .navbar-default .navbar-brand {
   height: auto;
 }
@@ -94,12 +99,18 @@
   padding-top: 57px;
   position: relative;
 }
+@media (max-width: 768px) {
+  .home-hero-parallax {
+    margin-top: 0;
+    padding-top: 0;
+  }
+}
 .home-hero-parallax #parallax-container {
   position: relative;
   width: 100%;
   height: 100%;
   z-index: 100;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 .home-hero-parallax #parallax-container #layer1 {
   position: absolute;
@@ -136,6 +147,7 @@
   position: absolute;
   top: 50%;
   transform: translate(0, -50%);
+  z-index: 1000;
 }
 .welcome-text h1 {
   line-height: 75px;
@@ -213,6 +225,17 @@ footer .footer-address-table tr td:first-child {
   font-family: 'Droid Serif Italic';
   font-size: 14px;
   color: #737373;
+}
+
+@media (max-width: 768px) {
+  .col768-6 {
+    width: 50%;
+  }
+}
+@media (max-width: 380px) {
+  .col768-6 {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
