--- a/app/assets/sass/style.scss
+++ b/app/assets/sass/style.scss
@@ -15,6 +15,10 @@
 
   .navbar-header {
     margin-right: 70px;
+
+    @media (max-width: 768px) {
+      margin-right: 0;
+    }
   }
 
   .navbar-brand {
@@ -47,13 +51,17 @@
   margin-top: -57px;
   padding-top: 57px;
   position: relative;
+  @media (max-width: 768px) {
+    margin-top: 0;
+    padding-top: 0;
+  }
 
   #parallax-container {
     position: relative;
     width: 100%;
     height: 100%;
     z-index: 100;
-    overflow-x: hidden;
+    overflow: hidden;
 
     #layer1 {
       position: absolute;
@@ -92,6 +100,7 @@
   position: absolute;
   top:50%;
   transform: translate(0,-50%);
+  z-index: 1000;
 
   h1 {
     line-height: 75px;
@@ -178,5 +187,14 @@ footer {
       font-size: 14px;
       color: #737373;
     }
+  }
+}
+
+.col768-6 {
+  @media (max-width: 768px) {
+    width: 50%;
+  }
+  @media (max-width: 380px) {
+    width: 100%;
   }
 }
