--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -105,12 +105,19 @@ html {
   color: #797979 !important;
 }
 
+.nav-header {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  right: 0;
+  left: 0;
+}
+
 /* HOME PAGE CSS */
 .home-hero-parallax {
   height: 100vh;
   width: 100%;
   background: #f9f8f6;
-  margin-top: -57px;
   padding-top: 57px;
   position: relative;
   overflow: hidden;
