--- a/app/assets/sass/style.scss
+++ b/app/assets/sass/style.scss
@@ -46,13 +46,20 @@ html {
   }
 }
 
+.nav-header {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  right: 0;
+  left: 0;
+}
 
 /* HOME PAGE CSS */
 .home-hero-parallax {
   height: 100vh;
   width: 100%;
   background: #f9f8f6;
-  margin-top: -57px;
+  //margin-top: -57px;
   padding-top: 57px;
   position: relative;
   overflow: hidden;
