--- a/app/assets/sass/style.scss
+++ b/app/assets/sass/style.scss
@@ -10,6 +10,21 @@ html {
   font-family: 'Montserrat-Regular';
 }
 
+body > .inner {
+  display: none;
+}
+
+body.pg-loaded > .inner {
+  display: block;
+}
+
+.form-control {
+  background: #f9f8f6;
+  border-radius: 0;
+  padding: 14px 16px;
+  height: auto !important;
+}
+
 .navbar-default {
   background: none;
   border: none;
@@ -52,6 +67,11 @@ html {
   width: 100%;
   right: 0;
   left: 0;
+
+  @media(max-width: 768px) {
+    background: white;
+    z-index: 4;
+  }
 }
 
 .navbar-toggle {
@@ -75,7 +95,7 @@ html {
   overflow: hidden;
   z-index: 1;
   @media (max-width: 768px) {
-    margin-top: 0;
+    margin-top: 50px;
     padding-top: 0;
   }
 
@@ -120,12 +140,12 @@ html {
 }
 
 .welcome-text {
-  position: relative;
+  position: absolute;
   //top:50%;
   //transform: translate(0,-50%);
   z-index: 1000;
   margin-top: 20vh;
-  padding: 0 45px;
+  padding: 0 95px;
 
   h1 {
     line-height: 75px;
@@ -263,6 +283,17 @@ footer {
   margin-top: 100px;
 }
 /* END OF ABOUT PAGE CSS */
+
+/* CONTACT PAGE CSS */
+.btn-contact {
+  background: #646260;
+  border-radius: 0;
+  color: white;
+  font-family: 'Montserrat-Regular';
+  padding: 14px 30px;
+  font-size: 14px;
+}
+/* END OF CONTACT PAGE CSS */
 
 .col768-6 {
   @media (max-width: 768px) {
