portfolio page added, loading screen bugs fixed

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -74,11 +74,11 @@ html {
 }
 
 body > .inner {
-  display: none;
+  visibility: hidden;
 }
 
 body.pg-loaded > .inner {
-  display: block;
+  visibility: visible;
 }
 
 .form-control {
@@ -201,12 +201,14 @@ body.pg-loaded > .inner {
 .welcome-text {
   position: absolute;
   z-index: 1000;
-  margin-top: 20vh;
+  top: 50% !important;
+  transform: translate(0, -50%);
+  margin-top: 0;
   padding: 0 95px;
 }
 @media (max-width: 768px) {
   .welcome-text {
-    top: 50%;
+    top: 50% !important;
     transform: translate(0, -50%);
     margin-top: 0;
   }
@@ -224,6 +226,10 @@ body.pg-loaded > .inner {
     line-height: 55px;
     font-size: 40px;
   }
+}
+
+#home-portfolio {
+  min-height: 300px;
 }
 
 .portfolio-btn {
@@ -306,6 +312,10 @@ footer .footer-address-table tr td:first-child {
 
 /* END FOOTER CSS */
 /* PORTFOLIO PAGE CSS */
+.portfolio-section {
+  margin-top: 150px;
+}
+
 .portfolio-container {
   margin-top: 100px;
 }
